RESOLVED FIXED Bug 233175
RemoteGraphicsContextGLProxyBase should not have platform-specific implementations
https://bugs.webkit.org/show_bug.cgi?id=233175
Summary RemoteGraphicsContextGLProxyBase should not have platform-specific implementa...
Kimmo Kinnunen
Reported 2021-11-16 00:24:03 PST
RemoteGraphicsContextGLProxyBase should not have platform-specific implementations It is a simple class mostly existing for no good reason The concrete class RemoteGraphicsContextGLProxy has Cocoa and WC implementations. The platform-specific code should move there.
Attachments
Patch (31.51 KB, patch)
2021-11-16 01:02 PST, Kimmo Kinnunen
ews-feeder: commit-queue-
Patch (31.63 KB, patch)
2021-11-16 01:25 PST, Kimmo Kinnunen
ews-feeder: commit-queue-
Patch (32.32 KB, patch)
2021-11-16 01:58 PST, Kimmo Kinnunen
no flags
Patch (32.33 KB, patch)
2021-11-16 03:41 PST, Kimmo Kinnunen
no flags
Patch for landing (31.70 KB, patch)
2021-11-16 23:38 PST, Kimmo Kinnunen
no flags
Kimmo Kinnunen
Comment 1 2021-11-16 01:02:17 PST
Kimmo Kinnunen
Comment 2 2021-11-16 01:25:11 PST
Kimmo Kinnunen
Comment 3 2021-11-16 01:58:21 PST
Kimmo Kinnunen
Comment 4 2021-11-16 03:41:26 PST
Antti Koivisto
Comment 5 2021-11-16 06:27:32 PST
Comment on attachment 444369 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=444369&action=review > Source/WebKit/WebProcess/GPU/webrtc/LibWebRTCCodecs.messages.in:1 > +´# Copyright (C) 2020 Apple Inc. All rights reserved. Some junk here.
Kimmo Kinnunen
Comment 6 2021-11-16 23:38:11 PST
Created attachment 444484 [details] Patch for landing
EWS
Comment 7 2021-11-18 01:49:52 PST
Committed r285990 (244387@main): <https://commits.webkit.org/244387@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 444484 [details].
Radar WebKit Bug Importer
Comment 8 2021-11-18 01:50:26 PST
Note You need to log in before you can comment on or make changes to this bug.