RemoteGraphicsContextGLProxyBase should not have platform-specific implementations https://bugs.webkit.org/show_bug.cgi?id=233175

Patch by Kimmo Kinnunen <kkinnunen@apple.com> on 2021-11-18
Reviewed by Antti Koivisto.

Move platform-specific code from RemoteGraphicsContextGLProxyBase to
WebKit::RemoteGraphicsContextGLProxyCocoa and WebKit::RemoteGraphicsContextGLProxyWC.
The platform-specific code is trivial and anyway used by the WebKit side concrete classes.

Source/WebCore:

No new tests, refactor.

* PlatformWinCairo.cmake:
* SourcesCocoa.txt:
* WebCore.xcodeproj/project.pbxproj:
* platform/graphics/RemoteGraphicsContextGLProxyBase.cpp:
(WebCore::RemoteGraphicsContextGLProxyBase::RemoteGraphicsContextGLProxyBase):
(WebCore::RemoteGraphicsContextGLProxyBase::platformInitialize): Deleted.
(WebCore::RemoteGraphicsContextGLProxyBase::platformLayer const): Deleted.
(WebCore::RemoteGraphicsContextGLProxyBase::paintCompositedResultsToMediaSample): Deleted.
* platform/graphics/RemoteGraphicsContextGLProxyBase.h:
* platform/graphics/avfoundation/objc/MediaSampleAVFObjC.h:
* platform/graphics/cocoa/RemoteGraphicsContextGLProxyBaseCocoa.mm: Removed.
(WebCore::RemoteGraphicsContextGLProxyBase::platformInitialize): Deleted.
(WebCore::RemoteGraphicsContextGLProxyBase::platformLayer const): Deleted.
(WebCore::RemoteGraphicsContextGLProxyBase::asCV): Deleted.
(WebCore::RemoteGraphicsContextGLProxyBase::paintCompositedResultsToMediaSample): Deleted.
* platform/graphics/wc/RemoteGraphicsContextGLProxyBaseWC.cpp: Removed.
(WebCore::RemoteGraphicsContextGLProxyBase::platformInitialize): Deleted.
(WebCore::RemoteGraphicsContextGLProxyBase::platformLayer const): Deleted.
(WebCore::RemoteGraphicsContextGLProxyBase::setPlatformLayer): Deleted.

Source/WebKit:

* PlatformWin.cmake:
* WebProcess/GPU/graphics/RemoteGraphicsContextGLProxy.cpp:
(WebKit::RemoteGraphicsContextGLProxy::RemoteGraphicsContextGLProxy):
(WebKit::RemoteGraphicsContextGLProxy::create): Deleted.
(WebKit::RemoteGraphicsContextGLProxy::prepareForDisplay): Deleted.
* WebProcess/GPU/graphics/RemoteGraphicsContextGLProxy.h:
* WebProcess/GPU/graphics/cocoa/RemoteGraphicsContextGLProxyCocoa.mm:
(WebKit::RemoteGraphicsContextGLProxy::create):
(WebKit::RemoteGraphicsContextGLProxy::prepareForDisplay): Deleted.
* WebProcess/GPU/graphics/wc/RemoteGraphicsContextGLProxyWC.cpp: Added.
(WebKit::RemoteGraphicsContextGLProxy::create):


Canonical link: https://commits.webkit.org/244387@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285990 268f45cc-cd09-0410-ab3c-d52691b4dbfc